k8s/api-converter/api-converter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter
spec:
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
      - name: web
        image: ferrarijose/conversao-peso:v1
        resources: {}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: converter
spec:
  selector:
    app: converter
  ports:
  - port: 80
    targetPort: 80
